# precip_extremes_scaling_quicc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
scripts/: update_benchmarks.py
src/precip_extremes_scaling/: __init__.py  ancil.py  cli.py  constants.py  core.py
tests/: test_scaling.py
